# SKVR-Settlement-Builder-Place-VR

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json.template  README.md  vcpkg.json
cmake/: package.cmake  resources.rc.in
data/config/: Settlement-Builder-Placer-VR.ini
data/mod/: README.txt  SKYRIM - SETTLEMENT BUILDER - PLACER VR.esp
data/mod/scripts/: Placeable_Banner_Adjustment.pex  Placeable_BookMenu_Script.pex  Placeable_CU_Options.pex  Placeable_CampfireUnleased_Start.pex  Placeable_Collision_Off_Script.pex  Placeable_Container_Adjustment.pex  Placeable_Container_Flora.pex  Placeable_Door_Adjustment_Script.pex  Placeable_Furniture_ItemAdjustment.pex  Placeable_Interior_Door_Adustment.pex  Placeable_ItemAdjustmentScript.pex  Placeable_Light_ItemAdjustment.pex  Placeable_MCM_Script.pex  Placeable_MISC_Placement_Script.pex  Placeable_SKSE_Potitioner_Toggle.pex  Placeable_Shrine_Adjustment_Script.pex  Placeable_ToggleGrass_Script.pex  PlacementVR_QSTScript.pex  SBPlaceVR.pex  placeable_gate_adjustment_script.pex  placeable_spelloptions_script.pex
data/mod/skse/plugins/CraftingCategories/: LvxMagick - Skyrim - Settlement Builder.json
data/mod/source/scripts/: PlacementVR_QSTScript.psc  SBPlaceVR.psc  placeable_banner_adjustment.psc  placeable_bookmenu_script.psc  placeable_campfireunleased_start.psc  placeable_collision_off_script.psc  placeable_container_adjustment.psc  placeable_container_flora.psc  placeable_cu_options.psc  placeable_door_adjustment_script.psc  placeable_furniture_itemadjustment.psc  placeable_gate_adjustment_script.psc  placeable_interior_door_adustment.psc  placeable_itemadjustmentscript.psc  placeable_light_itemadjustment.psc  placeable_mcm_script.psc  placeable_misc_placement_script.psc  placeable_shrine_adjustment_script.psc  placeable_skse_potitioner_toggle.psc  placeable_spelloptions_script.psc  placeable_togglegrass_script.psc
src/: BoundsUtil.h  Config.cpp  Config.h  InputBlocker.h  PCH.h  Papyrus.cpp  Papyrus.h  Placement.cpp  Placement.h  SettlementBuilderPlacer.cpp  SettlementBuilderPlacer.h  VRInputHandler.cpp  VRInputHandler.h  main.cpp
src/skcf/: ConfigBase.cpp  ConfigBase.h  Logger.h  ModBase.cpp  ModBase.h
src/skcf/common/: CommonUtils.cpp  CommonUtils.h  MatrixUtils.cpp  MatrixUtils.h
src/skcf/vr/: VRControllersManager.cpp  VRControllersManager.h
